--- a/2-Spark-Clusters-AWS/scripts/test-emr.ipynb
+++ b/2-Spark-Clusters-AWS/scripts/test-emr.ipynb
@@ -87,7 +87,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +101,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12 (main, Apr  5 2022, 06:56:58) \n[GCC 7.5.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cc9c43f639c6b365a2a60ca634de42e35350abc00fe2db137c4493a2411aa295"
+   }
   }
  },
  "nbformat": 4,
